@@ -122,7 +122,9 @@ import com.sun.jersey.api.client.ClientResponse;
 import fr.cirad.io.brapi.BrapiService;
 import fr.cirad.manager.IModuleManager;
 import fr.cirad.manager.ImportProcess;
+import fr.cirad.mgdb.importing.AgriplexImport;
 import fr.cirad.mgdb.importing.BrapiImport;
+import fr.cirad.mgdb.importing.DArTagImport;
 import fr.cirad.mgdb.importing.DartImport;
 import fr.cirad.mgdb.importing.FlapjackImport;
 import fr.cirad.mgdb.importing.HapMapImport;
@@ -2314,6 +2316,46 @@ public class GigwaRestController extends ControllerInterface {
                                                 );
                                                 newProjId = ((DartImport) genotypeImporter.get()).importToMongo(params);
                                             }
+                                            else if (filesByExtension.containsKey("xlsx")) {
+                                                Serializable s = filesByExtension.values().iterator().next();
+                                                boolean fIsGenotypingFileLocal = s instanceof File;
+                                                genotypeImporter.set(new AgriplexImport(processId));
+                                                if (retrieveIndNamesViaBrapi)
+                                                    genotypeImporter.get().setBrapiEndPointForNamingIndividuals(brapiURLs, brapiTokens.isEmpty() ? null : brapiTokens);
+                                                FileImportParameters params = new FileImportParameters(
+                                                        sNormalizedModule,
+                                                        sProject,
+                                                        sRun,
+                                                        sTechnology == null ? "" : sTechnology,
+                                                        nPloidy,
+                                                        assemblyName,
+                                                        sampleToIndividualMapping,
+                                                        fSkipMonomorphic,
+                                                        Boolean.TRUE.equals(fClearProjectData) ? 1 : 0,
+                                                        fIsGenotypingFileLocal ? ((File) s).toURI().toURL() : (URL) s
+                                                );
+                                                newProjId = ((AgriplexImport) genotypeImporter.get()).importToMongo(params);
+                                            }
+                                            else if (filesByExtension.containsKey("ebsdtg")) {
+                                                Serializable s = filesByExtension.values().iterator().next();
+                                                boolean fIsGenotypingFileLocal = s instanceof File;
+                                                genotypeImporter.set(new DArTagImport(processId));
+                                                if (retrieveIndNamesViaBrapi)
+                                                    genotypeImporter.get().setBrapiEndPointForNamingIndividuals(brapiURLs, brapiTokens.isEmpty() ? null : brapiTokens);
+                                                FileImportParameters params = new FileImportParameters(
+                                                        sNormalizedModule,
+                                                        sProject,
+                                                        sRun,
+                                                        sTechnology == null ? "" : sTechnology,
+                                                        nPloidy,
+                                                        assemblyName,
+                                                        sampleToIndividualMapping,
+                                                        fSkipMonomorphic,
+                                                        Boolean.TRUE.equals(fClearProjectData) ? 1 : 0,
+                                                        fIsGenotypingFileLocal ? ((File) s).toURI().toURL() : (URL) s
+                                                );
+                                                newProjId = ((DArTagImport) genotypeImporter.get()).importToMongo(params);
+                                            }
                                             else {	// should be hapmap
                                                 Serializable s = filesByExtension.values().iterator().next();
                                                 boolean fIsGenotypingFileLocal = s instanceof File;
@@ -2403,9 +2445,12 @@ public class GigwaRestController extends ControllerInterface {
 													sCompletionMessage = "Error importing metadata: " + mdImportProgress.getError();
 											}
 										}
-                                        if (progress.getFinalMessage() != null) {
+                                        if (progress.getFinalMessage() != null)
                                             sCompletionMessage = sCompletionMessage == null ? progress.getFinalMessage() :  progress.getFinalMessage() + " " + sCompletionMessage;
-                                        }
+
+                                        String brapiStudyId = sModule + "§" + (project != null ? project.getId() : newProjId);
+                                        progress.setInfoValue("studyDbId", brapiStudyId);
+                                        progress.setInfoValue("variantSetDbId", brapiStudyId + "§" + sRun);
                                         progress.markAsComplete(sCompletionMessage);
 									}
 								}
@@ -2999,7 +3044,7 @@ public class GigwaRestController extends ControllerInterface {
 						matrix.setProjects(projects);
                     }
 					if (!alleleMatrix.getDataMatrices().isEmpty()) {
-						matrix.setDataMatrix(alleleMatrix.getDataMatrices().getFirst().getDataMatrix()); //get GT dataMatrice
+						matrix.setDataMatrix(alleleMatrix.getDataMatrices().get(0).getDataMatrix()); //get GT dataMatrice
 					} else {
 						matrix.setDataMatrix(new ArrayList<>());
 					}
